# Web-Server

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  certbot-renew.service  certbot-renew.timer  configure  install.sh  load_test.sh  on_reboot.sh  renew_certs.sh  routing.conf  secure-serve-reboot.service  secure-serve.conf  secure-serve.service  setup.sh
.github/workflows/: codeql.yml
Server/: http.c  http.h  main.c
Server.xcodeproj/: project.pbxproj
Server.xcodeproj/project.xcworkspace/xcuserdata/jackthake.xcuserdatad/: UserInterfaceState.xcuserstate
Server.xcodeproj/xcuserdata/jackthake.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Server/Util/: file.c  file.h  net.c
public/: 404.html  endpoints.conf  index.html
public/css/: 404.css  index.css  style.css
serverroot/: 404.html  index.html
src/: Makefile  const.hpp  file.c  http.c  http.h  main.cpp  mime.c  net.h  server.c  server.cpp  server.hpp
src/net/: route.cpp  route.hpp  serve.cpp  serve.hpp
src/util/: file.cpp  file.h  file.hpp  log.cpp  log.hpp  mime.h  net.c  pool.cpp  pool.hpp
